# canadian-bookkeeping-agent

./: .env.example  .gitignore  Claude.MD  pyproject.toml
docs/: BOOKKEEPER_QUICKSTART.md
knowledge/: bookkeeping_cleanup_sop.md
src/agents/: base.py  cleanup_coach.py  cpa_reviewer.py  government_remittance.py  reconciliation.py  rollforward.py  tax_auditor.py
src/bot/: activity_handler.py  app.py
src/bot/cards/: agent_findings.json  audit_started.json  client_profile.json  cpa_memo.json  cpa_memo_llm.json  intake_progress.json  intake_request.json  journal_summary.json  statement_summary.json
src/orchestrator/: state_machine.py
src/parsers/: financial_statement.py  journal.py  labels.py
src/reports/: __init__.py  memo_pdf.py
src/store/: engagement_db.py
teams-manifest/: manifest.json
tests/fixtures/: journal_fr.csv  journal_sample.csv
tests/test_agents/: test_cleanup_coach.py  test_cpa_reviewer.py  test_government_remittance.py  test_reconciliation.py  test_rollforward.py  test_tax_auditor.py
tests/test_orchestrator/: test_state_machine.py
tests/test_parsers/: test_financial_statement.py  test_journal.py
tests/test_reports/: test_memo_pdf.py
tests/test_store/: test_engagement_db.py
workflows/: 01_intake.md
